<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.example.boighor.SignupActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        >

        <!--android:layout_alignParentBottom="true"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            >


            <ImageView
                android:id="@+id/ivRegLogo"
                android:layout_width="match_parent"
                android:layout_height="160dp"

                android:layout_marginBottom="55dp"
                android:layout_marginTop="18dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />



            <ImageView
                android:id="@+id/ivJoinUs"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="TODO"
                android:src="@drawable/joinus_text" />


            <AutoCompleteTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="@string/usernameReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="Address"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />



            <AutoCompleteTextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_person"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_person"
                android:hint="Mobile No"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />


            <AutoCompleteTextView
                android:id="@+id/email_signup"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_mail"
                android:hint="@string/emailReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />



            <AutoCompleteTextView
                android:id="@+id/pass_signup"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_password"
                android:hint="@string/passwordReg"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btnsignup_gradient"
                android:text="@string/sign_upReg"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:textSize="20dp"
                android:text="@string/signin_redirect"
                android:textColor="#FFEB3B"
                android:textStyle="bold"/>





        </LinearLayout>



    </ScrollView>

</RelativeLayout>
